--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/IoT Firmware/SoftwareEngineering/nbproject/private/
+/IoT Firmware/SoftwareEngineering/build/
+/IoT Firmware/SoftwareEngineering Warehouse Java Files/build/
+/IoT Firmware/SoftwareEngineering Warehouse Java Files/nbproject/private/
